add restricted api key

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div id="map" style="position: relative  !important; z-index: 5 !important;">
             <div>
                 <script
-                    src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY&region=IN&libraries=visualization&callback=initMap&v=weekly"
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDRfICUDAsIAKgjqiUKWc5SFoMZ-08NGI&region=IN&libraries=visualization&callback=initMap&v=weekly"
                     async></script>
 
             </div>
